force-app/main/default/objects/TerritoryRelevantAFields__mdt/TerritoryRelevantAFields__mdt.object-meta.xml
<CustomObject>
    <description>store the Territory relevant Accoutn fields  fro each GEO</description>
    <label>TerritoryRelevantField</label>
    <pluralLabel>TerritoryRelevantFields</pluralLabel>
</CustomObject>