force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/APAC_TRF_List__c.field-meta.xml
<CustomField>
    <fullName>APAC_TRF_List__c</fullName>
    <defaultValue>&quot;segment__c,Org_Type__c,BillingCountry,Employee_Count__c,Institution_FTE__c,Primary_Business__c,TerritorySegment__c,ShippingCountry,ShippingState&quot;</defaultValue>
    <description>list of Territory Relevant Fields(TRF) on Account for APAC geo.(for Top_Parent_Account_XXX fields use the formula  here, but  add the referenced field in Validation rule)
We use this field  to calculate AlignmentReadiness for APAC region</description>
    <label>APAC_TRF_List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>