force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/CascadeRegions__c.field-meta.xml
<CustomField>
    <fullName>CascadeRegions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if checked we  call alignment batch for each region one after another. Default is checked. The unchecked versiois  used when we want to run alignment for 1  GEO</description>
    <inlineHelpText>if checked we  call alignment batch for each region one after another. Default is checked.</inlineHelpText>
    <label>CascadeRegions</label>
    <type>Checkbox</type>
</CustomField>