force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/Date2EndAlignment__c.field-meta.xml
<CustomField>
    <fullName>Date2EndAlignment__c</fullName>
    <inlineHelpText>Limit the TerritoryName calculator to Accounts created before this date</inlineHelpText>
    <label>Date2EndAlignment</label>
    <type>Date</type>
</CustomField>