force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/Date2StartAlignment__c.field-meta.xml
<CustomField>
    <fullName>Date2StartAlignment__c</fullName>
    <description>if this field is set  we align only  Accounts  created after this date. Otherwise we align all.</description>
    <inlineHelpText>if this field is set  we align only  Accounts  created after this date. Otherwise we align all.</inlineHelpText>
    <label>Date2StartAlignment</label>
    <type>Date</type>
</CustomField>