force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/EMEA_TRF_List__c.field-meta.xml
<CustomField>
    <fullName>EMEA_TRF_List__c</fullName>
    <defaultValue>&quot;Org_Type__c,Institution_FTE__c,Primary_Business__c,Account_FTE__c,Employee_Count__c,ShippingCountry,ShippingState&quot;</defaultValue>
    <label>EMEA_TRF_List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>