force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/FieldList__c.field-meta.xml
<CustomField>
    <fullName>FieldList__c</fullName>
    <description>list of ALL Account fields which play a role in alignment (for all GEO)</description>
    <label>FieldList</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>