force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/handleMissingTerr__c.field-meta.xml
<CustomField>
    <fullName>handleMissingTerr__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if is checked we include all Accounts where TerritoryName is missing. It is a kind of remediation operation. we do not care about CreatedDate an dis intended to fix the historical data</description>
    <inlineHelpText>if is checked we include all Accounts where TerritoryName is missing</inlineHelpText>
    <label>handleMissingTerr</label>
    <type>Checkbox</type>
</CustomField>