force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/HUB_ITEM_RT__c.field-meta.xml
<CustomField>
    <fullName>HUB_ITEM_RT__c</fullName>
    <description>RcordType Id  of the HUB_ITEM type  TYerritory Allcator record</description>
    <label>HUB_ITEM_RT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>