force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/isPilot__c.field-meta.xml
<CustomField>
    <fullName>isPilot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when is Pilot we do not  set the Account TerritoryName. only the Suggested TerrName</description>
    <inlineHelpText>when is Pilot we do not  set the Account TerritoryName. only the Suggested TerrName</inlineHelpText>
    <label>isPilot</label>
    <type>Checkbox</type>
</CustomField>