force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/LATAM_TRF_List__c.field-meta.xml
<CustomField>
    <fullName>LATAM_TRF_List__c</fullName>
    <defaultValue>&quot;Org_Type__c,ShippingPostalCode,TerritorySegment__c,ShippingCountry,ShippingState&quot;</defaultValue>
    <label>LATAM_TRF_List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>