force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/List_of_GEO__c.field-meta.xml
<CustomField>
    <fullName>List_of_GEO__c</fullName>
    <defaultValue>&quot;APAC;LATAM,EMEA;NORAM;CHINA&quot;</defaultValue>
    <label>List of GEO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>