force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/NORAM_TRF_List__c.field-meta.xml
<CustomField>
    <fullName>NORAM_TRF_List__c</fullName>
    <defaultValue>&quot;Sector__c,segment__c,Org_Size__c,Org_Type__c,Employee_Count__c,Institution_FTE__c,Primary_Business__c,TerritorySegment__c,Employee_Count__c,Account_FTE__c,ShippingPostalCode,ShippingCountry,ShippingState&quot;</defaultValue>
    <label>NORAM_TRF_List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>