force-app/main/default/objects/TerritoryRelevantAFields__mdt/fields/SyncOppTerritory__c.field-meta.xml
<CustomField>
    <fullName>SyncOppTerritory__c</fullName>
    <defaultValue>true</defaultValue>
    <description>is Checked the Account territory is  cascaded down to Opportunities before Need Approval stage</description>
    <inlineHelpText>is Checked the Account territory is  cascaded down to Opportunities before Need Approval stage and When Account is frozen get Opp Team Members</inlineHelpText>
    <label>SyncOppTerritory</label>
    <type>Checkbox</type>
</CustomField>